// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CartCount/> matches the snapshot 1`] = `
<CartCount__AnimationStyles>
  <TransitionGroup
    childFactory={[Function]}
    component="div"
  >
    <CSSTransition
      className="count"
      classNames="count"
      key="11"
      timeout={
        Object {
          "enter": 400,
          "exit": 400,
        }
      }
      unmountOnExit={true}
    >
      <CartCount__Dot>
        11
      </CartCount__Dot>
    </CSSTransition>
  </TransitionGroup>
</CartCount__AnimationStyles>
`;

exports[`<CartCount/> updates via props 1`] = `
<CartCount__AnimationStyles>
  <TransitionGroup
    childFactory={[Function]}
    component="div"
  >
    <CSSTransition
      className="count"
      classNames="count"
      key="11"
      timeout={
        Object {
          "enter": 400,
          "exit": 400,
        }
      }
      unmountOnExit={true}
    >
      <CartCount__Dot>
        11
      </CartCount__Dot>
    </CSSTransition>
  </TransitionGroup>
</CartCount__AnimationStyles>
`;

exports[`<CartCount/> updates via props 2`] = `
<CartCount__AnimationStyles>
  <TransitionGroup
    childFactory={[Function]}
    component="div"
  >
    <CSSTransition
      className="count"
      classNames="count"
      key="10"
      timeout={
        Object {
          "enter": 400,
          "exit": 400,
        }
      }
      unmountOnExit={true}
    >
      <CartCount__Dot>
        10
      </CartCount__Dot>
    </CSSTransition>
  </TransitionGroup>
</CartCount__AnimationStyles>
`;

exports[`<CartCount/> updates via props 3`] = `
<CartCount
  count={11}
>
  <CartCount__AnimationStyles>
    <span
      className="CartCount__AnimationStyles-xxvp4g-0 hlznbU"
    >
      <TransitionGroup
        childFactory={[Function]}
        component="div"
      >
        <div>
          <CSSTransition
            className="count"
            classNames="count"
            in={true}
            key=".$11"
            onExited={[Function]}
            timeout={
              Object {
                "enter": 400,
                "exit": 400,
              }
            }
            unmountOnExit={true}
          >
            <Transition
              appear={false}
              className="count"
              enter={true}
              exit={true}
              in={true}
              mountOnEnter={false}
              onEnter={[Function]}
              onEntered={[Function]}
              onEntering={[Function]}
              onExit={[Function]}
              onExited={[Function]}
              onExiting={[Function]}
              timeout={
                Object {
                  "enter": 400,
                  "exit": 400,
                }
              }
              unmountOnExit={true}
            >
              <CartCount__Dot
                className="count"
              >
                <div
                  className="count CartCount__Dot-xxvp4g-1 kDZyEW"
                >
                  11
                </div>
              </CartCount__Dot>
            </Transition>
          </CSSTransition>
        </div>
      </TransitionGroup>
    </span>
  </CartCount__AnimationStyles>
</CartCount>
`;

exports[`<CartCount/> updates via props 4`] = `
<CartCount
  count={10}
>
  <CartCount__AnimationStyles>
    <span
      className="CartCount__AnimationStyles-xxvp4g-0 hlznbU"
    >
      <TransitionGroup
        childFactory={[Function]}
        component="div"
      >
        <div>
          <CSSTransition
            className="count"
            classNames="count"
            in={true}
            key=".$10"
            onExited={[Function]}
            timeout={
              Object {
                "enter": 400,
                "exit": 400,
              }
            }
            unmountOnExit={true}
          >
            <Transition
              appear={false}
              className="count"
              enter={true}
              exit={true}
              in={true}
              mountOnEnter={false}
              onEnter={[Function]}
              onEntered={[Function]}
              onEntering={[Function]}
              onExit={[Function]}
              onExited={[Function]}
              onExiting={[Function]}
              timeout={
                Object {
                  "enter": 400,
                  "exit": 400,
                }
              }
              unmountOnExit={true}
            >
              <CartCount__Dot
                className="count"
              >
                <div
                  className="count CartCount__Dot-xxvp4g-1 kDZyEW"
                >
                  10
                </div>
              </CartCount__Dot>
            </Transition>
          </CSSTransition>
          <CSSTransition
            className="count"
            classNames="count"
            in={false}
            key=".$11"
            onExited={[Function]}
            timeout={
              Object {
                "enter": 400,
                "exit": 400,
              }
            }
            unmountOnExit={true}
          >
            <Transition
              appear={false}
              className="count"
              enter={true}
              exit={true}
              in={false}
              mountOnEnter={false}
              onEnter={[Function]}
              onEntered={[Function]}
              onEntering={[Function]}
              onExit={[Function]}
              onExited={[Function]}
              onExiting={[Function]}
              timeout={
                Object {
                  "enter": 400,
                  "exit": 400,
                }
              }
              unmountOnExit={true}
            >
              <CartCount__Dot
                className="count"
              >
                <div
                  className="count CartCount__Dot-xxvp4g-1 kDZyEW"
                >
                  11
                </div>
              </CartCount__Dot>
            </Transition>
          </CSSTransition>
        </div>
      </TransitionGroup>
    </span>
  </CartCount__AnimationStyles>
</CartCount>
`;
